Fixed 'You can now rise'
Signed-off-by: Sebastian Basierski <sebastian@basierski.pl>

--- a/po/wesnoth-sota/pl.po
+++ b/po/wesnoth-sota/pl.po
@@ -4609,20 +4609,20 @@ msgid ""
 "                You can now raise troll corpses!,\n"
 "                You can now raise dwarf corpses!"
 msgstr ""
-"Możesz ożywiać teraz ciała nietoperzy!,\n"
-"                Możesz ożywiać teraz ciała szczurów!,\n"
-"                Możesz ożywiać teraz ciała wilków!,\n"
-"                Możesz ożywiać teraz ciała ludzi!,\n"
-"                Możesz ożywiać teraz ciała jeźdzców!,\n"
-"                Możesz ożywiać teraz ciała wilczych jeżdzców!,\n"
-"                Możesz ożywiać teraz ciała swimming corpses!,\n"
-"                Możesz ożywiać teraz ciała saurian corpses!,\n"
-"                Możesz ożywiać teraz ciała wose corpses!,\n"
-"                Możesz ożywiać teraz ciała goblinów!,\n"
-"                Możesz ożywiać teraz ciała gryfonów!,\n"
-"                Możesz ożywiać teraz ciała pająków!,\n"
-"                Możesz ożywiać teraz ciała trolli!,\n"
-"                Możesz ożywiać teraz ciała krasnoludów!"
+"Możesz teraz ożywiać ciała nietoperzy!,\n"
+"                Możesz teraz ożywiać ciała szczurów!,\n"
+"                Możesz teraz ożywiać ciała wilków!,\n"
+"                Możesz teraz ożywiać ciała ludzi!,\n"
+"                Możesz teraz ożywiać ciała jeźdzców!,\n"
+"                Możesz teraz ożywiać ciała wilczych jeżdzców!,\n"
+"                Możesz teraz ożywiać ciała swimming corpses!,\n"
+"                Możesz teraz ożywiać ciała saurian corpses!,\n"
+"                Możesz teraz ożywiać ciała wose corpses!,\n"
+"                Możesz teraz ożywiać ciała goblinów!,\n"
+"                Możesz teraz ożywiać ciała gryfonów!,\n"
+"                Możesz teraz ożywiać ciała pająków!,\n"
+"                Możesz teraz ożywiać ciała trolli!,\n"
+"                Możesz teraz ożywiać ciała krasnoludów!"
 #. [message]: speaker=narrator
 #: data/campaigns/Secrets_of_the_Ancients/utils/zombie-utils.cfg:346
 msgid "A lua error has occurred, and a corpse cannot be recruited."
