--- a/po/wesnoth-sof/pl.po
+++ b/po/wesnoth-sof/pl.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2020-10-25 18:00 UTC\n"
-"PO-Revision-Date: 2016-01-14 10:04+0100\n"
+"PO-Revision-Date: 2020-11-02 12:28+0100\n"
 "Last-Translator: Jarom <jaromirb@op.pl>\n"
 "Language-Team: none\n"
 "Language: pl_PL\n"
@@ -14,7 +14,7 @@ msgstr ""
 "|| n%100>=20) ? 1 : 2);\n"
 "X-Poedit-Bookmarks: 8,-1,-1,-1,-1,-1,-1,-1,-1,-1\n"
 "X-Poedit-Basepath: /usr/local/share/wesnoth\n"
-"X-Generator: Poedit 1.8.6\n"
+"X-Generator: Poedit 2.4.1\n"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:11
@@ -33,17 +33,13 @@ msgstr "Krasnoludzki wojownik"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:20
-#, fuzzy
-#| msgid "(Normal)"
 msgid "Normal"
-msgstr "(normalny)"
+msgstr "Normalny"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:21
-#, fuzzy
-#| msgid "(Challenging)"
 msgid "Challenging"
-msgstr "(wymagający)"
+msgstr "Wymagający"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:21
@@ -52,10 +48,8 @@ msgstr "Pancerny krasnolud"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:22
-#, fuzzy
-#| msgid "(Difficult)"
 msgid "Difficult"
-msgstr "(trudny)"
+msgstr "Trudny"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:22
@@ -64,17 +58,6 @@ msgstr "Krasnoludzki władca"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:25
-#, fuzzy
-#| msgid ""
-#| "The land of Wesnoth’s banner bold\n"
-#| "Comes not from its own land;\n"
-#| "It comes from Dwarfdom, grim and old\n"
-#| "Made by a runesmith’s hand.\n"
-#| "So now I tell from whence it came —\n"
-#| "The Fire-sceptre great —\n"
-#| "And of the makers of the same,\n"
-#| "Their tale I now relate...\n"
-#| "\n"
 msgid ""
 "<i>The land of Wesnoth’s banner bold\n"
 "Comes not from its own land;\n"
@@ -86,22 +69,20 @@ msgid ""
 "Their tale I now relate...</i>\n"
 "\n"
 msgstr ""
-"Krainy Wesnoth godła potężnego\n"
+"<i>Krainy Wesnoth godła potężnego\n"
 "Nie stworzył nikt z wielkich jej synów;\n"
 "W mrocznej krainie ludu brodatego\n"
 "Wykuła je ręka kowala runów.\n"
 "Opowiem wam teraz dzieje niezwykłe,\n"
 "Historię, jak Berło Ognia powstało,\n"
 "Jego twórców czyny chwalebne,\n"
-"których pamięć na wieki zachowano...\n"
+"których pamięć na wieki zachowano...</i>\n"
 "\n"
 
 #. [campaign]: id=Sceptre_of_Fire
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:34
-#, fuzzy
-#| msgid "(Expert level, 9 scenarios.)"
 msgid "(Hard level, 9 scenarios.)"
-msgstr "(Poziom zaawansowany, 9 scenariuszy)"
+msgstr "(Poziom trudny, 9 scenariuszy)"
 
 #. [about]
 #: data/campaigns/Sceptre_of_Fire/_main.cfg:39
@@ -339,22 +320,16 @@ msgstr ""
 
 #. [message]: speaker=Haldric II
 #: data/campaigns/Sceptre_of_Fire/scenarios/1_A_Bargain_is_Struck.cfg:253
-#, fuzzy
-#| msgid ""
-#| "When the elves came to Weldyn, about ten years ago, they spoke of a mage "
-#| "named Crelanu, and of his advice about the ruby. He said that the "
-#| "radiance of the stone could be contained, and that doing so would stop "
-#| "the stone’s effect."
 msgid ""
 "When the elves came to Tath, about five years ago, they spoke of a mage "
 "named Crelanu, and of his advice about the ruby. He said that the radiance "
 "of the stone could be contained, and that doing so would stop the stone’s "
 "effect."
 msgstr ""
-"Kiedy elfy przybyły do Weldyn, jakieś dziesięć lat temu, mówiły o magu "
-"imieniem Crelanu i jego poradzie dotyczącej Rubinu. Powiedział on, że "
-"obudowanie klejnotu pozwoliłoby poskromić jego blask i w ten sposób "
-"zniwelować jego negatywny wpływ."
+"Kiedy elfy przybyły do Tath, jakieś pięć lat temu, mówiły o magu imieniem "
+"Crelanu i jego poradzie dotyczącej Rubinu. Powiedział on, że obudowanie "
+"klejnotu pozwoliłoby poskromić jego blask i w ten sposób zniwelować jego "
+"negatywny wpływ."
 
 #. [message]: speaker=Rugnur
 #: data/campaigns/Sceptre_of_Fire/scenarios/1_A_Bargain_is_Struck.cfg:257
@@ -413,15 +388,11 @@ msgstr ""
 
 #. [message]: speaker=Rugnur
 #: data/campaigns/Sceptre_of_Fire/scenarios/1_A_Bargain_is_Struck.cfg:284
-#, fuzzy
-#| msgid ""
-#| "Uh, no, wait! Lets talk business — how much will you pay us to do this "
-#| "for you?"
 msgid ""
 "Uh, no, wait! Let’s talk business — how much will you pay us to do this for "
 "you?"
 msgstr ""
-"Nie nie, czekaj! Porozmawiajmy o interesach — ile nam za to zapłacicie?"
+"Nie, nie, czekaj! Porozmawiajmy o interesach — ile nam za to zapłacicie?"
 
 #. [message]: speaker=Haldric II
 #: data/campaigns/Sceptre_of_Fire/scenarios/1_A_Bargain_is_Struck.cfg:288
@@ -681,7 +652,7 @@ msgstr "Ten wasz cały Landar może mnie cmoknąć w toporek."
 #. [message]: speaker=Rugnur
 #: data/campaigns/Sceptre_of_Fire/scenarios/1_A_Bargain_is_Struck.cfg:678
 msgid "Good, the road is secured. Let’s move those caravans!"
-msgstr ""
+msgstr "Dobrze, droga została zabezpieczona. Ruszajmy tymi karawanami!"
 
 #. [message]: speaker=Haldric II
 #: data/campaigns/Sceptre_of_Fire/scenarios/1_A_Bargain_is_Struck.cfg:702
@@ -939,17 +910,12 @@ msgstr ""
 #. [message]: speaker=Baglur
 #. all the dwarves are inside, although there might still be some elves inside too
 #: data/campaigns/Sceptre_of_Fire/scenarios/2_Closing_the_Gates.cfg:515
-#, fuzzy
-#| msgid ""
-#| "Just watch. The gates wi’ close very soon. Then the elves outside — and, "
-#| "unfortunately, our dwarves who are still out there — wi’ become "
-#| "irrelevant."
 msgid ""
 "Just watch. The gates wi’ close very soon. Then the elves outside wi’ become "
 "irrelevant."
 msgstr ""
-"Po prostu patrz. Wrota zaraz się zamkną, a wtedy elfy na zewnątrz — a "
-"niestety i krasnoludy, które wciąż tam będą — przestaną dla nas istnieć."
+"Po prostu patrz. Wrota zaraz się zamkną, a wtedy elfy na zewnątrz przestaną "
+"dla nas istnieć."
 
 #. [message]: speaker=Glindur
 #: data/campaigns/Sceptre_of_Fire/scenarios/2_Closing_the_Gates.cfg:550
@@ -1277,12 +1243,6 @@ msgstr "Potwory"
 
 #. [part]
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:40
-#, fuzzy
-#| msgid ""
-#| "The journey to the far northern wastelands was long and perilous. For the "
-#| "tunnels were winding and treacherous, and the paths were not safe from "
-#| "orcs, or worse. Nevertheless, they did reach the northlands, and began to "
-#| "search for the runesmith named Thursagan — the sage of fire."
 msgid ""
 "The journey to the far northern wastelands was long and perilous. For the "
 "tunnels were winding and treacherous, and the paths were not safe from orcs, "
@@ -1291,7 +1251,7 @@ msgid ""
 msgstr ""
 "Podróż ku pustkowiom dalekiej północy była długa i niebezpieczna. Tunele "
 "były kręte i zdradliwe, a w ciemnościach czaiły się nie tylko orki, ale i "
-"stwory dużo groźniejsze. Mimo to dotarli do północnych ziem i rozpoczęli "
+"stwory dużo groźniejsze. Mimo to dotarli do Północnych Ziem i rozpoczęli "
 "poszukiwania runarza zwanego Thursaganem — mędrcem ognia."
 
 #. [objective]: condition=win
@@ -1372,15 +1332,11 @@ msgstr ""
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:229
-#, fuzzy
-#| msgid ""
-#| "Except for trolls and ogres, right? They live in the far northlands. "
-#| "They’re probably lurking around here somewhere."
 msgid ""
 "Except for trolls and ogres, right? They live in the far Northlands. They’re "
 "probably lurking around here somewhere."
 msgstr ""
-"Oczywiście nie licząc trolli i ogrów? To one żyją na ziemiach północnych i "
+"Oczywiście nie licząc trolli i ogrów? To one żyją na Ziemiach Północnych i "
 "zapewne czają gdzieś w okolicy."
 
 #. [message]: speaker=Baglur
@@ -1449,7 +1405,6 @@ msgstr "Pewnie, pomożemy wam w walce z trollami i ogrami."
 #. [message]: speaker=Krawg
 #. "I see a house in the distance!"
 #: data/campaigns/Sceptre_of_Fire/scenarios/3_Searching_for_the_Runecrafter.cfg:438
-#, fuzzy
 msgid "Iii zeee hoose iiin eee d’zztaaan’eee!"
 msgstr "Wiiiidzzzzzzę dzoooooom w odzzdaaaliii!"
 
@@ -1612,10 +1567,8 @@ msgstr ""
 
 #. [message]: speaker=Baglur
 #: data/campaigns/Sceptre_of_Fire/scenarios/3t_The_Council_Regathers.cfg:135
-#, fuzzy
-#| msgid "Yes, we did. And that is Krawg, who helped us in the northlands."
 msgid "Yes, we did. And that is Krawg, who helped us in the Northlands."
-msgstr "Tak, udało nam się. A to jest Krawg, pomógł nam w północnych ziemiach."
+msgstr "Tak, udało nam się. A to jest Krawg, pomógł nam w Północnych Ziemiach."
 
 #. [message]: speaker=Krawg
 #. "Yeah! Me Krawg!"
@@ -2224,7 +2177,7 @@ msgstr ""
 #. [label]
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:138
 msgid "Shorbear caves"
-msgstr ""
+msgstr "Jaskinie Shorbearów"
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:146
@@ -2233,9 +2186,6 @@ msgstr "Pokonaj Glonoina, wodza klanu Shorbear"
 
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:155
-#, fuzzy
-#| msgid ""
-#| "Have all heroes in the Shorbear caves while no enemies are in the caves"
 msgid "Have all heroes, and no enemies, in the Shorbear caves"
 msgstr ""
 "Wszyscy bohaterowie muszą być w jaskiniach klanu Shorbear i oczyścić je z "
@@ -2433,7 +2383,7 @@ msgstr "Zamknąć się, wszyscy! Atakować ich!"
 #. [message]: speaker=narrator
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:376
 msgid "You may now recruit Gryphon Riders."
-msgstr ""
+msgstr "Możesz teraz rekrutować jeźdźców gryfów."
 
 #. [unit]: id=Lyndar, type=Elvish Marshal
 #: data/campaigns/Sceptre_of_Fire/scenarios/5_Hills_of_the_Shorbear_Clan.cfg:392
@@ -2743,12 +2693,6 @@ msgstr ""
 
 #. [message]: speaker=Thursagan
 #: data/campaigns/Sceptre_of_Fire/scenarios/6_Towards_the_Caves.cfg:305
-#, fuzzy
-#| msgid ""
-#| "You don’t have authority over me, Durstorn. And I wouldn’t give the "
-#| "Sceptre to them even if you did. It’s not yours to give, its mine, and "
-#| "Rugnur’s, and Baglur’s. Krawg’s done more for its existence than you "
-#| "have! And yet, you still get the profits from selling it to Haldric."
 msgid ""
 "You don’t have authority over me, Durstorn. And I wouldn’t give the Sceptre "
 "to them even if you did. It’s not yours to give, it’s mine, and Rugnur’s, "
@@ -2896,11 +2840,6 @@ msgstr ""
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/6_Towards_the_Caves.cfg:464
-#, fuzzy
-#| msgid ""
-#| "I’m not going to do that, its suicide! And in any case, I’ve been with "
-#| "you for ten years, almost as long as I was in the Wesnothian army; I’d "
-#| "prefer to fight with you."
 msgid ""
 "I’m not going to do that, it’s suicide! And in any case, I’ve been with you "
 "for ten years, almost as long as I was in the Wesnothian army; I’d prefer to "
@@ -2935,11 +2874,6 @@ msgstr ""
 
 #. [message]: speaker=Rugnur
 #: data/campaigns/Sceptre_of_Fire/scenarios/6_Towards_the_Caves.cfg:510
-#, fuzzy
-#| msgid ""
-#| "Alanin, ride as fast as you can south. Tell Haldric we are heading "
-#| "northeast, towards the old eastern mines, and if he wants his precious "
-#| "sceptre he should send forces to meet us there as soon as he can!"
 msgid ""
 "Alanin, ride south as fast as you can. Tell Haldric we are heading "
 "northeast, towards the old eastern mines, and if he wants his precious "
@@ -3077,7 +3011,7 @@ msgstr "Raesil"
 #. [message]: speaker=second_unit
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:217
 msgid "Great, now there is no need to worry about those elves anymore!"
-msgstr ""
+msgstr "Świetnie, teraz nie musimy się już przejmować tymi elfami!"
 
 #. [message]: role=newcomer
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:226
@@ -3085,6 +3019,8 @@ msgid ""
 "Did you really think that you could escape us? Don’t underestimate us, "
 "inferior humans!"
 msgstr ""
+"Naprawdę myślałeś, że możesz nam uciec? Nie lekceważcie nas, wy podrzędni "
+"ludzie!"
 
 #. [message]: id=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:238
@@ -3092,21 +3028,23 @@ msgid ""
 "Even though my chances have grown worse, I have to fulfil my duty. I do not "
 "owe them any less!"
 msgstr ""
+"Nawet jeżeli nasze szanse zmalały, muszę wypełnić mój obowiązek. "
+"Przynajmniej do tego jestem zobowiązany!"
 
 #. [message]: id=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:263
 msgid "Oh no, more of them? And there I thought I could catch my breath…"
-msgstr ""
+msgstr "O nie, więcej ich? A już myślałem, że mogę złapać oddech..."
 
 #. [message]: role=fighter
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:268
 msgid "Don’t worry sir, we’ll make it through this!"
-msgstr ""
+msgstr "Nie martwcie się, panie, damy sobie radę!"
 
 #. [message]: id=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:293
 msgid "Is there no end to their numbers?"
-msgstr ""
+msgstr "Czy ich siły są niewyczerpane?"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:358
@@ -3134,6 +3072,8 @@ msgstr ""
 msgid ""
 "You slow humans took too long, our detachment has already caught up with you!"
 msgstr ""
+"Wy powolni ludzie, wlekliście się zbyt długo, nasze posiłki zdołały was "
+"dopaść!"
 
 #. [unit]: type=Lieutenant, id=Hadlin   # wmllint: ignore
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:543
@@ -3148,35 +3088,25 @@ msgstr "Kto idzie?"
 #. [message]: speaker=Alanin
 #. dragoon = his unit type
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:565
-#, fuzzy
-#| msgid ""
-#| "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a "
-#| "mission in the northlands, and now elvish horsemen are chasing me. I "
-#| "barely evaded them."
 msgid ""
 "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a mission "
 "in the Northlands, and now elvish horsemen are chasing me. I barely evaded "
 "them."
 msgstr ""
 "Jestem dragonem, gwardzistą króla Haldrica II. Zostałem wysłany na misję do "
-"północnych ziem, ścigają mnie teraz elficcy jeźdźcy. Ledwo udało mi się ich "
+"Północnych Ziem, ścigają mnie teraz elficcy jeźdźcy. Ledwo udało mi się ich "
 "zgubić."
 
 #. [message]: speaker=Alanin
 #. cavalier = his unit type
 #: data/campaigns/Sceptre_of_Fire/scenarios/7_Outriding_the_Outriders.cfg:572
-#, fuzzy
-#| msgid ""
-#| "I’m a dragoon, with Haldric II’s personal bodyguard. I was sent on a "
-#| "mission in the northlands, and now elvish horsemen are chasing me. I "
-#| "barely evaded them."
 msgid ""
 "I’m a cavalier, with Haldric II’s personal bodyguard. I was sent on a "
 "mission in the Northlands, and now elvish horsemen are chasing me. I barely "
 "evaded them."
 msgstr ""
-"Jestem dragonem, gwardzistą króla Haldrica II. Zostałem wysłany na misję do "
-"północnych ziem, ścigają mnie teraz elficcy jeźdźcy. Ledwo udało mi się ich "
+"Jestem ułanem, gwardzistą króla Haldrica II. Zostałem wysłany na misję do "
+"Północnych Ziem, ścigają mnie teraz elficcy jeźdźcy. Ledwo udało mi się ich "
 "zgubić."
 
 #. [message]: speaker=Hadlin  # wmllint: ignore
@@ -3386,10 +3316,6 @@ msgstr "Ta śliczna metalowa skała jest moja! Trzymajcie się od niej z dala!"
 
 #. [message]: speaker=Thursagan
 #: data/campaigns/Sceptre_of_Fire/scenarios/8_The_Dragon.cfg:422
-#, fuzzy
-#| msgid ""
-#| "This forge will work perfectly. Give me a few days here, and I can "
-#| "reforge the Sceptre of Fire to fulfill its purpose."
 msgid ""
 "This forge will work perfectly. Give me a day or two here, and I can reforge "
 "the Sceptre of Fire to fulfill its purpose."
@@ -3445,17 +3371,12 @@ msgstr "Orki"
 #. [part]
 #. The text in 1.14.4 mentioned Knalga. Geographically, these caves are in Knalga, but the text was confusing if the reader thought of the Knalgan Alliance.
 #: data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg:161
-#, fuzzy
-#| msgid ""
-#| "There was no exit from the caverns of Knalga. They had reached the realms "
-#| "of the orcs, with the elves hot on their trail. And there was no exit "
-#| "from those caves."
 msgid ""
 "There was no exit for the dwarves. They had reached the realms of the orcs, "
 "with the elves hot on their trail. There was truly no exit from these caves."
 msgstr ""
-"Z jaskiń Knalgi nie było żadnego wyjścia. Dotarli do terenów orków, a elfy "
-"postępowały tuż za nimi. A z tych jaskiń nie było już żadnego wyjścia."
+"Krasnoludy nie miały żadnego wyjścia. Dotarli do terenów orków, a elfy "
+"postępowały tuż za nimi. Naprawdę nie było żadnego wyjścia z tych jaskiń."
 
 #. [part]
 #: data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg:164
@@ -3626,7 +3547,7 @@ msgstr ""
 #. [objective]: condition=win
 #: data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg:552
 msgid "Survive as long as possible"
-msgstr ""
+msgstr "Przeżyj tak długo jak to możliwe"
 
 #. [message]: role=smartelf
 #: data/campaigns/Sceptre_of_Fire/scenarios/9_Caverns_of_Flame.cfg:603
@@ -3718,16 +3639,12 @@ msgstr "Stać! W jakim celu przybywasz do Weldyn, stolicy Wesnoth?"
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:103
-#, fuzzy
-#| msgid ""
-#| "Stand aside. I am Alanin, of Haldric’s royal guard, and I bring news from "
-#| "the northlands."
 msgid ""
 "Stand aside. I am Alanin, of Haldric’s royal guard, and I bring news from "
 "the Northlands."
 msgstr ""
 "Z drogi. Jestem Alanin, z królewskiej straży Haldrica, przynoszę wieści z "
-"północnych ziem."
+"Północnych Ziem."
 
 #. [message]: speaker=Gatekeeper
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:107
@@ -3759,15 +3676,11 @@ msgstr "Wejdź, Alaninie, i przekaż wiadomość królowi."
 
 #. [message]: speaker=Alanin
 #: data/campaigns/Sceptre_of_Fire/scenarios/Epilogue.cfg:126
-#, fuzzy
-#| msgid ""
-#| "My King, fifteen years ago you sent me on a mission into the northlands. "
-#| "I have returned. What do you wish to know of my mission?"
 msgid ""
 "My King, fifteen years ago you sent me on a mission into the Northlands. I "
 "have returned. What do you wish to know of my mission?"
 msgstr ""
-"Mój królu, piętnaście lat temu wysłałeś mnie z misją do północnych ziem. "
+"Mój królu, piętnaście lat temu wysłałeś mnie z misją do Północnych Ziem. "
 "Powróciłem. Co chciałbyś wiedzieć o moim zadaniu?"
 
 #. [message]: speaker=Haldric II
